forts/manifests/app-evaluator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: qliksense-operator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/version: PLACEHOLDER
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
    prometheus.io/scrape_high_cardinality: "true"
  labels:
    app: app-evaluator
    app.kubernetes.io/component: app-evaluator
    app.kubernetes.io/instance: app-evaluator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/part-of: qliksense
    app.kubernetes.io/version: 1.10.4
    chart: app-evaluator-1.10.4
    domain: analytics
    heritage: Helm
    release: qlik-default
  name: app-evaluator
  namespace: default
spec:
  ports:
  - name: app-evaluator
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: app-evaluator-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: app-evaluator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/part-of: qliksense
    release: qlik-default
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: qliksense-operator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/version: PLACEHOLDER
  labels:
    app: app-evaluator
    app.kubernetes.io/component: app-evaluator
    app.kubernetes.io/instance: app-evaluator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/part-of: qliksense
    app.kubernetes.io/version: 1.10.4
    chart: app-evaluator-1.10.4
    domain: analytics
    heritage: Helm
    release: qlik-default
  name: app-evaluator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-evaluator
      app.kubernetes.io/name: qliksense
      app.kubernetes.io/part-of: qliksense
      release: qlik-default
  template:
    metadata:
      annotations:
        app.kubernetes.io/name: app-evaluator
        checksum/configs: f867bbddb7087d6acc2bc0bf82f6e81c6a2220253b8bbba399192c8f2b839a0d
        checksum/secrets: 74abc20576e46370b460f40b25245bb7932f4dd90fe046d6461e275765f18c4e
      labels:
        app: app-evaluator
        app.kubernetes.io/name: qliksense
        app.kubernetes.io/part-of: qliksense
        domain: analytics
        messaging-nats-client: "true"
        release: qlik-default
    spec:
      containers:
      - env:
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: TOKEN_AUTH_PRIVATE_KEY_FILE
          value: /run/secrets/qlik.com/app-evaluator/tokenAuthPrivateKey
        - name: TOKEN_AUTH_PRIVATE_KEY_ID_FILE
          value: /run/secrets/qlik.com/app-evaluator/tokenAuthPrivateKeyId
        - name: COLLECTIONS_URI
          valueFrom:
            configMapKeyRef:
              key: collectionsUri
              name: app-evaluator-configs
        - name: EDGE_AUTH_URI
          valueFrom:
            configMapKeyRef:
              key: edgeAuthUri
              name: app-evaluator-configs
        - name: FEATURE_FLAGS_URI
          valueFrom:
            configMapKeyRef:
              key: featureFlagsUri
              name: app-evaluator-configs
        - name: INGRESS_AUTH_URL
          valueFrom:
            configMapKeyRef:
              key: ingressAuthUrl
              name: app-evaluator-configs
        - name: KEYS_URI
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: app-evaluator-configs
        - name: LICENSES_URI
          valueFrom:
            configMapKeyRef:
              key: licensesUri
              name: app-evaluator-configs
        - name: MONGO_ADDR
          valueFrom:
            configMapKeyRef:
              key: mongoAddr
              name: app-evaluator-configs
        - name: MONGO_AUTH_DB
          valueFrom:
            configMapKeyRef:
              key: mongoAuthDB
              name: app-evaluator-configs
        - name: MONGO_AUTHENTICATION
          valueFrom:
            configMapKeyRef:
              key: mongoAuthentication
              name: app-evaluator-configs
        - name: MONGO_DATABASE
          valueFrom:
            configMapKeyRef:
              key: mongoDatabase
              name: app-evaluator-configs
        - name: MONGO_USERNAME
          valueFrom:
            configMapKeyRef:
              key: mongoUsername
              name: app-evaluator-configs
        - name: NATS_STREAMING_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: natsStreamingClusterId
              name: app-evaluator-configs
        - name: NATS_URI
          valueFrom:
            configMapKeyRef:
              key: natsUri
              name: app-evaluator-configs
        - name: QIX_SESSIONS_URI
          valueFrom:
            configMapKeyRef:
              key: qixSessionsUri
              name: app-evaluator-configs
        - name: REDIS_URI
          valueFrom:
            configMapKeyRef:
              key: redisUri
              name: app-evaluator-configs
        - name: AUTH_ENABLED
          value: "true"
        - name: AUTH_JWT_AUD
          value: qlik.api.internal
        - name: AUTH_JWT_ISS
          value: qlik.api.internal
        - name: ENGINE_METRICS_PORT
          value: "9090"
        - name: MAX_PARALLEL_CONSUMERS
          value: "5"
        - name: MONGO_ENABLED
          value: ""
        - name: NATS_ENABLED
          value: ""
        - name: NATS_TOKEN_AUTH_ENABLED
          value: "true"
        - name: QIX_SESSIONS_ENABLED
          value: ""
        - name: REDIS_ENABLED
          value: ""
        - name: STAN_SYSTEM_EVENTS_SUBJECT
          value: system-events.evaluations
        - name: TERMINATION_GRACE_PERIOD_SECONDS
          value: "1810"
        - name: TOKEN_AUTH_ENABLED
          value: "true"
        - name: JAEGER_AGENT_HOST
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        - name: OTLP_AGENT_HOST
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        - name: HTTP_PROXY
          valueFrom:
            configMapKeyRef:
              key: httpProxy
              name: qliksense-configs
        - name: HTTPS_PROXY
          valueFrom:
            configMapKeyRef:
              key: httpsProxy
              name: qliksense-configs
        - name: NO_PROXY
          valueFrom:
            configMapKeyRef:
              key: noProxy
              name: qliksense-configs
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              key: mongodbUri
              name: qliksense-secrets
        - name: MONGODB_URI_FILE
          value: /run/secrets/qlik.com/qliksense/mongodbUri
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: redisPassword
              name: qliksense-secrets
        - name: REDIS_PASSWORD_FILE
          value: /run/secrets/qlik.com/qliksense/redisPassword
        - name: REDIS_ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              key: redisEncryptionKey
              name: qliksense-secrets
        - name: REDIS_ENCRYPTION_KEY_FILE
          value: /run/secrets/qlik.com/qliksense/redisEncryptionKey
        - name: MINIO_ROOT_USER
          valueFrom:
            secretKeyRef:
              key: minioRootUser
              name: qliksense-secrets
        - name: MINIO_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: minioRootPassword
              name: qliksense-secrets
        - name: FORT_ID
          valueFrom:
            configMapKeyRef:
              key: fortId
              name: qliksense-configs
        - name: FORT_IOT_CERTIFICATE_ID
          valueFrom:
            configMapKeyRef:
              key: fortIotCertificateId
              name: qliksense-configs
        - name: FORT_IOT_THING_NAME
          valueFrom:
            configMapKeyRef:
              key: fortressId
              name: qliksense-configs
        - name: FORT_NAME
          valueFrom:
            configMapKeyRef:
              key: fortName
              name: qliksense-configs
        - name: FORT_ORIGIN_URL
          valueFrom:
            configMapKeyRef:
              key: fortOriginUrl
              name: qliksense-configs
        - name: FORT_TENANT_URL
          valueFrom:
            configMapKeyRef:
              key: fortTenantUrl
              name: qliksense-configs
        - name: FORTRESS_IOT_THING_ROLE_ALIAS_NAME
          valueFrom:
            configMapKeyRef:
              key: iotThingRoleAliasName
              name: qliksense-configs
        - name: FORTRESS_ID
          valueFrom:
            configMapKeyRef:
              key: fortressId
              name: qliksense-configs
        - name: FORTRESS_DEVICE_CREDENTIAL_ENDPOINT
          valueFrom:
            configMapKeyRef:
              key: iotCredentialUrl
              name: qliksense-configs
        - name: FORTRESS_IOT_CREDENTIAL_ENDPOINT
          value: https://$(FORTRESS_DEVICE_CREDENTIAL_ENDPOINT)
        - name: FORTRESS_REGION
          valueFrom:
            configMapKeyRef:
              key: iotAwsRegion
              name: qliksense-configs
        - name: FORTRESS_THING_CA_FILE
          value: /run/secrets/qlik.com/qliksense/iotRootCa
        - name: FORTRESS_THING_CERT_FILE
          value: /run/secrets/qlik.com/qliksense/iotFortThingCert
        - name: FORTRESS_THING_DATA_ENDPOINT
          valueFrom:
            configMapKeyRef:
              key: fortressThingDataEndpoint
              name: qliksense-configs
        - name: FORTRESS_THING_KEY_FILE
          value: /run/secrets/qlik.com/qliksense/iotFortThingPrivateKey
        - name: FORTRESS_THING_NAME
          valueFrom:
            configMapKeyRef:
              key: thingName
              name: qliksense-configs
        - name: FORT_WEB_INTEGRATION_ID
          valueFrom:
            configMapKeyRef:
              key: fortWebIntegrationId
              name: qliksense-configs
        - name: FORT_TENANT_ID
          valueFrom:
            configMapKeyRef:
              key: tenantId
              name: qliksense-configs
        - name: FORT_PRIVATE_KEY_FILE
          value: /run/secrets/qlik.com/qliksense/iotThingPrivateKey
        - name: FORT_IOT_PRIVATE_KEY_FILE
          value: /run/secrets/qlik.com/qliksense/iotThingPrivateKey
        - name: JAEGER_DISABLED
          value: "true"
        - name: DISABLE_OTLP
          value: "true"
        - name: MONGO_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mongodbPassword
              name: qliksense-secrets
        image: ghcr.io/qlik-download/app-evaluator:1.10.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
        name: app-evaluator
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
        volumeMounts:
        - mountPath: /run/secrets/qlik.com/app-evaluator
          name: app-evaluator-secrets
          readOnly: true
        - mountPath: /etc/ssl/certs
          name: ca-certificates
        - mountPath: /run/secrets/qlik.com/qliksense
          name: qliksense-secrets
          readOnly: true
      imagePullSecrets:
      - name: artifactory-docker-secret
      serviceAccountName: app-evaluator
      terminationGracePeriodSeconds: 1810
      volumes:
      - name: app-evaluator-secrets
        secret:
          secretName: app-evaluator-secrets
      - name: ca-certificates
        persistentVolumeClaim:
          claimName: ca-certificates
      - name: qliksense-secrets
        secret:
          secretName: qliksense-secrets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: qliksense-operator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/version: PLACEHOLDER
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://edge-auth.default.svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: app-evaluator
    app.kubernetes.io/component: app-evaluator
    app.kubernetes.io/instance: app-evaluator
    app.kubernetes.io/name: qliksense
    app.kubernetes.io/part-of: qliksense
    app.kubernetes.io/version: 1.10.4
    chart: app-evaluator-1.10.4
    domain: analytics
    heritage: Helm
    release: qlik-default
  name: app-evaluator
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app-evaluator
            port:
              number: 8080
        path: /api/v1/apps/(.+)/evaluations
        pathType: ImplementationSpecific
      - backend:
          service:
            name: app-evaluator
            port:
              number: 8080
        path: /api/v1/apps/evaluations
        pathType: ImplementationSpecific
      - backend:
          service:
            name: app-evaluator
            port:
              number: 8080
        path: /api/v1/evaluations
        pathType: ImplementationSpecific
